RESOLVED FIXED44585
[DRT/Chromium] Fix fast/notifications/notifications-display-close-events.html failure
https://bugs.webkit.org/show_bug.cgi?id=44585
Summary [DRT/Chromium] Fix fast/notifications/notifications-display-close-events.html...
Kent Tamura
Reported 2010-08-24 22:54:03 PDT
[DRT/Chromium] Fix fast/notifications/notifications-display-close-events.html failure
Attachments
Patch (3.64 KB, patch)
2010-08-24 23:02 PDT, Kent Tamura
no flags
Kent Tamura
Comment 1 2010-08-24 23:02:22 PDT
Adam Barth
Comment 2 2010-08-30 16:50:05 PDT
Comment on attachment 65374 [details] Patch > WebKitTools/DumpRenderTree/chromium/NotificationPresenter.cpp:50 > +static void deferredDisplayDispatch(WebNotification notification) > +{ > + notification.dispatchDisplayEvent(); > +} We really would like to have RunnableMethods, huh?
Kent Tamura
Comment 3 2010-08-30 17:17:58 PDT
(In reply to comment #2) > (From update of attachment 65374 [details]) > > WebKitTools/DumpRenderTree/chromium/NotificationPresenter.cpp:50 > > +static void deferredDisplayDispatch(WebNotification notification) > > +{ > > + notification.dispatchDisplayEvent(); > > +} > We really would like to have RunnableMethods, huh? Probably. Anyway, we need to revisit here to remove base/task.h dependency.
Kent Tamura
Comment 4 2010-08-30 17:19:26 PDT
Comment on attachment 65374 [details] Patch Clearing flags on attachment: 65374 Committed r66430: <http://trac.webkit.org/changeset/66430>
Kent Tamura
Comment 5 2010-08-30 17:19:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.