2010-08-30  Kent Tamura  <tkent@chromium.org>

Reviewed by Adam Barth.

        Fix fast/notifications/notifications-display-close-events.html failure
        https://bugs.webkit.org/show_bug.cgi?id=44585

        * platform/chromium/drt_expectations.txt:
2010-08-30  Kent Tamura  <tkent@chromium.org>

        Reviewed by Adam Barth.

        Fix fast/notifications/notifications-display-close-events.html failure
        https://bugs.webkit.org/show_bug.cgi?id=44585

        Apply http://crrev.com/48893. We should dispatch display events
        asynchronously.

        * DumpRenderTree/chromium/NotificationPresenter.cpp:
        (deferredDisplayDispatch):
        (NotificationPresenter::show):

Canonical link: https://commits.webkit.org/57193@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66430 268f45cc-cd09-0410-ab3c-d52691b4dbfc